--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">дневник потраченного времени</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
