--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">дневник потраченного времени</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="description">введите краткую информацию о проделанных действиях</string>
 </resources>
